--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.12.1",
         "buefy": "^0.8.12",
         "bulma": "^0.8.0",
         "font-awesome": "^4.7.0",
