--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@fortawesome/fontawesome-free": "^5.12.1",
         "buefy": "^0.8.12",
         "bulma": "^0.8.0",
+        "bulma-extensions": "^6.2.7",
         "font-awesome": "^4.7.0",
         "slug": "^2.1.1",
         "vue": "^2.6.11"
